// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works with failed rating prop 1`] = `
<Text
  style={
    Array [
      Object {
        "letterSpacing": 2,
      },
      undefined,
    ]
  }
>
  <Translation
    passThrough=""
  />
</Text>
`;

exports[`works with failed rating prop 2`] = `
<Text
  style={
    Array [
      Object {
        "letterSpacing": 2,
      },
      undefined,
    ]
  }
>
  <Translation
    passThrough=""
  />
</Text>
`;

exports[`works with rating prop 1`] = `
<Text
  style={
    Array [
      Object {
        "letterSpacing": 2,
      },
      undefined,
    ]
  }
>
  <Translation
    passThrough="★★★"
  />
</Text>
`;

exports[`works with rating prop 2`] = `
<Text
  style={
    Array [
      Object {
        "letterSpacing": 2,
      },
      undefined,
    ]
  }
>
  <Translation
    passThrough="★★★★★★★★★★"
  />
</Text>
`;
